--- a/css/main.css
+++ b/css/main.css
@@ -7,4 +7,14 @@
 body {
   font-family: "Montserrat", sans-serif;
   background-color: #333;
+}
+
+nav {
+  text-transform: uppercase;
+}
+nav .nav-link,
+nav .navbar-brand,
+nav .navbar-nav .nav-link.active,
+nav .navbar-nav .nav-link.show {
+  color: white;
 }/*# sourceMappingURL=main.css.map */
