--- a/sass/main.scss
+++ b/sass/main.scss
@@ -8,3 +8,13 @@ body {
 	font-family: 'Montserrat', sans-serif;
 	background-color: #333;
 }
+
+nav {
+	text-transform: uppercase;
+	.nav-link,
+	.navbar-brand,
+	.navbar-nav .nav-link.active,
+	.navbar-nav .nav-link.show {
+		color: white;
+	}
+}
