--- a/css/main.css
+++ b/css/main.css
@@ -14,7 +14,13 @@ nav {
 }
 nav .nav-link,
 nav .navbar-brand,
+nav .navbar-nav .nav-link.show,
+nav .fa-bars {
+  color: white;
+}
+nav .nav-link:focus,
+nav .nav-link:hover,
 nav .navbar-nav .nav-link.active,
 nav .navbar-nav .nav-link.show {
-  color: white;
+  color: #039dff;
 }/*# sourceMappingURL=main.css.map */
