--- a/sass/main.scss
+++ b/sass/main.scss
@@ -13,8 +13,14 @@ nav {
 	text-transform: uppercase;
 	.nav-link,
 	.navbar-brand,
+	.navbar-nav .nav-link.show,
+	.fa-bars {
+		color: white;
+	}
+	.nav-link:focus,
+	.nav-link:hover,
 	.navbar-nav .nav-link.active,
 	.navbar-nav .nav-link.show {
-		color: white;
+		color: #039dff;
 	}
 }
