added color variables

--- a/css/main.css
+++ b/css/main.css
@@ -16,7 +16,7 @@ nav .nav-link,
 nav .navbar-brand,
 nav .navbar-nav .nav-link.show,
 nav .fa-bars {
-  color: white;
+  color: #fff;
 }
 nav .nav-link:focus,
 nav .nav-link:hover,
