--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,3 +1,5 @@
+@use 'colors.scss';
+
 * {
 	box-sizing: border-box;
 	margin: 0;
@@ -15,12 +17,12 @@ nav {
 	.navbar-brand,
 	.navbar-nav .nav-link.show,
 	.fa-bars {
-		color: white;
+		color: colors.$white;
 	}
 	.nav-link:focus,
 	.nav-link:hover,
 	.navbar-nav .nav-link.active,
 	.navbar-nav .nav-link.show {
-		color: #039dff;
+		color: colors.$main-blue;
 	}
 }
