--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,4 +1,4 @@
-@use 'colors.scss';
+@use './colors' as *;
 
 * {
 	box-sizing: border-box;
@@ -17,12 +17,12 @@ nav {
 	.navbar-brand,
 	.navbar-nav .nav-link.show,
 	.fa-bars {
-		color: colors.$white;
+		color: $white;
 	}
 	.nav-link:focus,
 	.nav-link:hover,
 	.navbar-nav .nav-link.active,
 	.navbar-nav .nav-link.show {
-		color: colors.$main-blue;
+		color: $main-color;
 	}
 }
