--- a/sass/main.scss
+++ b/sass/main.scss
@@ -13,6 +13,12 @@ body {
 
 nav {
 	text-transform: uppercase;
+	.navbar-toggler {
+		padding: 10px 15px;
+	}
+	.navbar-brand {
+		font-weight: bold;
+	}
 	.nav-link,
 	.navbar-brand,
 	.navbar-nav .nav-link.show,
