added heroimg and some text

--- a/css/main.css
+++ b/css/main.css
@@ -24,9 +24,24 @@ nav .navbar-nav .nav-link.show,
 nav .fa-bars {
   color: #fff;
 }
+nav .navbar-brand:focus,
+nav .navbar-brand:hover,
+nav .nav-logo-color,
 nav .nav-link:focus,
 nav .nav-link:hover,
 nav .navbar-nav .nav-link.active,
 nav .navbar-nav .nav-link.show {
   color: #039dff;
+}
+
+.hero-img {
+  height: 100vh;
+  width: 100vw;
+  filter: brightness(50%);
+  background-image: url("../img/gaming-4970616_1920.jpg");
+  background-position: center;
+  background-repeat: no-repeat;
+}
+.hero-img h1 {
+  text-transform: uppercase;
 }/*# sourceMappingURL=main.css.map */
