--- a/css/main.css
+++ b/css/main.css
@@ -26,7 +26,7 @@ nav .fa-bars {
 }
 nav .navbar-brand:focus,
 nav .navbar-brand:hover,
-nav .nav-logo-color,
+nav .logo-color,
 nav .nav-link:focus,
 nav .nav-link:hover,
 nav .navbar-nav .nav-link.active,
@@ -34,14 +34,33 @@ nav .navbar-nav .nav-link.show {
   color: #039dff;
 }
 
-.hero-img {
+header.hero-img {
+  position: relative;
   height: 100vh;
-  width: 100vw;
-  filter: brightness(50%);
-  background-image: url("../img/gaming-4970616_1920.jpg");
+  background-image: url("../img/gaming-4970616_640.jpg");
   background-position: center;
-  background-repeat: no-repeat;
+  background-size: cover;
+  background-attachment: fixed;
+  color: #fff;
 }
-.hero-img h1 {
+header.hero-img h1 {
   text-transform: uppercase;
+}
+header.hero-img h1 .logo-color {
+  color: #039dff;
+}
+header.hero-img .hero-shadow {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0);
+}
+header.hero-img .hero-text {
+  text-align: center;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }/*# sourceMappingURL=main.css.map */
