--- a/sass/main.scss
+++ b/sass/main.scss
@@ -27,7 +27,7 @@ nav {
 	}
 	.navbar-brand:focus,
 	.navbar-brand:hover,
-	.nav-logo-color,
+	.logo-color,
 	.nav-link:focus,
 	.nav-link:hover,
 	.navbar-nav .nav-link.active,
@@ -36,15 +36,36 @@ nav {
 	}
 }
 
-.hero-img {
+header.hero-img {
+	position: relative;
 	height: 100vh;
-	width: 100vw;
-	filter: brightness(50%);
-	background-image: url('../img/gaming-4970616_1920.jpg');
+	background-image: url('../img/gaming-4970616_640.jpg');
 	background-position: center;
-	background-repeat: no-repeat;
+	background-size: cover;
+	background-attachment: fixed;
+	color: $white;
 
 	h1 {
+		.logo-color{
+			color: $main-color;
+		}
 		text-transform: uppercase;
+	}
+
+	.hero-shadow {
+		position: absolute;
+		top: 0;
+		left: 0;
+		width: 100%;
+		height: 100%;
+		background-color: rgb(0, 0, 0, 0);
+	}
+
+	.hero-text {
+		text-align: center;
+		position: absolute;
+		top: 50%;
+		left: 50%;
+		transform: translate(-50%, -50%);
 	}
 }
