--- a/sass/main.scss
+++ b/sass/main.scss
@@ -11,6 +11,10 @@ body {
 	background-color: #333;
 }
 
+.blue-text {
+	color: $main-color;
+}
+
 nav {
 	text-transform: uppercase;
 	.navbar-toggler {
@@ -27,7 +31,6 @@ nav {
 	}
 	.navbar-brand:focus,
 	.navbar-brand:hover,
-	.logo-color,
 	.nav-link:focus,
 	.nav-link:hover,
 	.navbar-nav .nav-link.active,
@@ -44,11 +47,9 @@ header.hero-img {
 	background-size: cover;
 	background-attachment: fixed;
 	color: $white;
+	z-index: 0;
 
 	h1 {
-		.logo-color{
-			color: $main-color;
-		}
 		text-transform: uppercase;
 	}
 
@@ -58,14 +59,15 @@ header.hero-img {
 		left: 0;
 		width: 100%;
 		height: 100%;
-		background-color: rgb(0, 0, 0, 0);
+		background-color: rgb(0, 0, 0, 0.8);
+		z-index: -1;
 	}
 
 	.hero-text {
-		text-align: center;
-		position: absolute;
-		top: 50%;
-		left: 50%;
-		transform: translate(-50%, -50%);
+		display: flex;
+		flex-direction: column;
+		justify-content: center;
+		align-items: center;
+		height: 100%;
 	}
 }
