--- a/sass/main.scss
+++ b/sass/main.scss
@@ -72,3 +72,9 @@ header.hero-img {
 		height: 100%;
 	}
 }
+
+@media (min-width: 1200px) {
+	header.hero-img {
+		background-image: url('../img/gaming-4970616_1920.jpg');
+	}
+}
