--- a/sass/main.scss
+++ b/sass/main.scss
@@ -71,6 +71,9 @@ header.hero-img {
 		align-items: center;
 		height: 100%;
 	}
+	.fa-solid {
+		justify-content: center;
+	}
 }
 
 @media (min-width: 1200px) {
