--- a/css/main.css
+++ b/css/main.css
@@ -4,6 +4,10 @@
   padding: 0;
 }
 
+html {
+  scroll-padding-top: 74.4px;
+}
+
 body {
   font-family: "Montserrat", sans-serif;
   background-color: #333;
@@ -32,7 +36,7 @@ body {
 nav {
   z-index: 1;
   text-transform: uppercase;
-  transition: 0.6s;
+  transition: background-color 0.6s;
 }
 nav .navbar-toggler {
   padding: 10px 15px;
@@ -94,7 +98,7 @@ header.hero-img .fa-chevron-down {
 }
 
 .aboutus i {
-  margin-top: 25px;
+  margin-top: 35px;
   font-size: 30px;
 }
 .aboutus .aboutus-card-title {
@@ -103,6 +107,9 @@ header.hero-img .fa-chevron-down {
 }
 .aboutus .aboutus-card-text {
   font-size: 14px;
+}
+.aboutus .aboutus-hover {
+  transition: color 0.3s;
 }
 .aboutus .aboutus-hover:hover {
   color: #039dff;
