--- a/sass/main.scss
+++ b/sass/main.scss
@@ -6,6 +6,10 @@
 	padding: 0;
 }
 
+html {
+	scroll-padding-top: 74.4px;
+}
+
 body {
 	font-family: 'Montserrat', sans-serif;
 	background-color: #333;
@@ -34,7 +38,7 @@ body {
 nav {
 	z-index: 1;
 	text-transform: uppercase;
-	transition: 0.6s;
+	transition: background-color 0.6s;
 	.navbar-toggler {
 		padding: 10px 15px;
 	}
@@ -100,7 +104,7 @@ header.hero-img {
 
 .aboutus {
 	i {
-		margin-top: 25px;
+		margin-top: 35px;
 		font-size: 30px;
 	}
 
@@ -113,12 +117,16 @@ header.hero-img {
 		font-size: 14px;
 	}
 
+	.aboutus-hover {
+		transition: color 0.3s;
+	}
+
 	.aboutus-hover:hover {
 		color: $main-color;
 	}
 }
 
-@media (min-width: 768px) {
+@media (min-width: ) @media (min-width: 768px) {
 	.hero-text {
 		h1 {
 			font-size: 42px;
@@ -126,6 +134,12 @@ header.hero-img {
 		p {
 			font-size: 20px;
 		}
+	}
+}
+
+@media (min-width: 992px) {
+	html {
+		scroll-padding-top: 72px;
 	}
 }
 
