--- a/css/main.css
+++ b/css/main.css
@@ -115,12 +115,22 @@ header.hero-img .fa-chevron-down {
   color: #039dff;
 }
 
+section.portfolio {
+  color: #fff;
+  background-image: url("../img/technology-2818664_640.jpg");
+}
+
 @media (min-width: 768px) {
   .hero-text h1 {
     font-size: 42px;
   }
   .hero-text p {
     font-size: 20px;
+  }
+}
+@media (min-width: 992px) {
+  html {
+    scroll-padding-top: 72px;
   }
 }
 @media (min-width: 1200px) {
