--- a/css/main.css
+++ b/css/main.css
@@ -5,7 +5,7 @@
 }
 
 html {
-  scroll-padding-top: 74.4px;
+  scroll-padding-top: 74px;
 }
 
 body {
@@ -28,15 +28,15 @@ body {
 
 .underline {
   margin: 0 auto 40px;
-  width: 65px;
-  height: 5px;
+  width: 60px;
+  height: 4px;
   background-color: #039dff;
 }
 
 nav {
-  z-index: 1;
   text-transform: uppercase;
   transition: background-color 0.6s;
+  z-index: 5;
 }
 nav .navbar-toggler {
   padding: 10px 15px;
@@ -45,17 +45,15 @@ nav .navbar-brand {
   font-weight: bold;
 }
 nav .nav-link,
+nav .navbar-nav .show > .nav-link,
 nav .navbar-brand,
-nav .navbar-nav .nav-link.show,
 nav .fa-bars {
   color: #fff;
 }
-nav .navbar-brand:focus,
-nav .navbar-brand:hover,
 nav .nav-link:focus,
 nav .nav-link:hover,
 nav .navbar-nav .nav-link.active,
-nav .navbar-nav .nav-link.show {
+nav .navbar-nav .show > .nav-link {
   color: #039dff;
 }
 
@@ -63,8 +61,8 @@ header.hero-img {
   position: relative;
   height: 100vh;
   background-image: url("../img/gaming-4970616_640.jpg");
-  background-position: center;
   background-size: cover;
+  background-position: center;
   background-attachment: fixed;
   color: #fff;
   z-index: 0;
@@ -79,13 +77,13 @@ header.hero-img .hero-shadow {
   width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.8);
-  z-index: -1;
+  z-index: -5;
 }
 header.hero-img .hero-text {
   display: flex;
-  flex-direction: column;
   justify-content: center;
   align-items: center;
+  flex-direction: column;
   height: 100%;
 }
 header.hero-img .fa-chevron-down {
@@ -98,7 +96,7 @@ header.hero-img .fa-chevron-down {
 }
 
 .aboutus i {
-  margin-top: 35px;
+  margin-top: 20px;
   font-size: 30px;
 }
 .aboutus .aboutus-card-title {
@@ -115,9 +113,22 @@ header.hero-img .fa-chevron-down {
   color: #039dff;
 }
 
-section.portfolio {
-  color: #fff;
+.aboutus-hero {
+  position: relative;
   background-image: url("../img/technology-2818664_640.jpg");
+  background-size: cover;
+  background-position: center;
+  color: #ddd;
+  z-index: 0;
+}
+.aboutus-hero .aboutus-shadow {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.7);
+  z-index: -5;
 }
 
 @media (min-width: 768px) {
