--- a/sass/main.scss
+++ b/sass/main.scss
@@ -7,7 +7,7 @@
 }
 
 html {
-	scroll-padding-top: 74.4px;
+	scroll-padding-top: 74px;
 }
 
 body {
@@ -30,33 +30,35 @@ body {
 
 .underline {
 	margin: 0 auto 40px;
-	width: 65px;
-	height: 5px;
+	width: 60px;
+	height: 4px;
 	background-color: $main-color;
 }
 
 nav {
-	z-index: 1;
 	text-transform: uppercase;
 	transition: background-color 0.6s;
+	z-index: 5;
+
 	.navbar-toggler {
 		padding: 10px 15px;
 	}
+
 	.navbar-brand {
 		font-weight: bold;
 	}
+
 	.nav-link,
+	.navbar-nav .show > .nav-link,
 	.navbar-brand,
-	.navbar-nav .nav-link.show,
 	.fa-bars {
 		color: $white;
 	}
-	.navbar-brand:focus,
-	.navbar-brand:hover,
+
 	.nav-link:focus,
 	.nav-link:hover,
 	.navbar-nav .nav-link.active,
-	.navbar-nav .nav-link.show {
+	.navbar-nav .show > .nav-link {
 		color: $main-color;
 	}
 }
@@ -65,8 +67,8 @@ header.hero-img {
 	position: relative;
 	height: 100vh;
 	background-image: url('../img/gaming-4970616_640.jpg');
-	background-position: center;
 	background-size: cover;
+	background-position: center;
 	background-attachment: fixed;
 	color: $white;
 	z-index: 0;
@@ -82,16 +84,17 @@ header.hero-img {
 		width: 100%;
 		height: 100%;
 		background-color: rgb(0, 0, 0, 0.8);
-		z-index: -1;
+		z-index: -5;
 	}
 
 	.hero-text {
 		display: flex;
-		flex-direction: column;
 		justify-content: center;
 		align-items: center;
+		flex-direction: column;
 		height: 100%;
 	}
+
 	.fa-chevron-down {
 		position: absolute;
 		left: 50%;
@@ -104,7 +107,7 @@ header.hero-img {
 
 .aboutus {
 	i {
-		margin-top: 35px;
+		margin-top: 20px;
 		font-size: 30px;
 	}
 
@@ -112,7 +115,6 @@ header.hero-img {
 		font-size: 18px;
 		text-transform: uppercase;
 	}
-
 	.aboutus-card-text {
 		font-size: 14px;
 	}
@@ -126,10 +128,23 @@ header.hero-img {
 	}
 }
 
-section.portfolio {
-	color: $white;
+.aboutus-hero {
+	position: relative;
 	background-image: url('../img/technology-2818664_640.jpg');
+	background-size: cover;
+	background-position: center;
+	color: $light-gray;
+	z-index: 0;
 
+	.aboutus-shadow {
+		position: absolute;
+		top: 0;
+		left: 0;
+		width: 100%;
+		height: 100%;
+		background-color: rgba(0, 0, 0, 0.7);
+		z-index: -5;
+	}
 }
 
 @media (min-width: 768px) {
@@ -137,6 +152,7 @@ section.portfolio {
 		h1 {
 			font-size: 42px;
 		}
+
 		p {
 			font-size: 20px;
 		}
