--- a/sass/main.scss
+++ b/sass/main.scss
@@ -145,6 +145,18 @@ header.hero-img {
 		background-color: rgba(0, 0, 0, 0.7);
 		z-index: -5;
 	}
+
+	.aboutus-hero-item {
+		margin: 10px 0;
+
+		i {
+			font-size: 36px;
+		}
+
+		.aboutus-hero-title {
+			font-size: 24px;
+		}
+	}
 }
 
 @media (min-width: 768px) {
@@ -162,6 +174,10 @@ header.hero-img {
 @media (min-width: 992px) {
 	html {
 		scroll-padding-top: 72px;
+	}
+
+	.aboutus-hero {
+		background-image: url('../img/technology-2818664_1920.jpg');
 	}
 }
 
