--- a/css/main.css
+++ b/css/main.css
@@ -140,6 +140,15 @@ header.hero-img .fa-chevron-down {
   font-size: 24px;
 }
 
+.portfolio .carousel-item {
+  height: 600px;
+}
+.portfolio .carousel-caption {
+  left: 0;
+  right: 0;
+  background-color: rgba(0, 0, 0, 0.8);
+}
+
 @media (min-width: 768px) {
   .hero-text h1 {
     font-size: 42px;
