--- a/sass/main.scss
+++ b/sass/main.scss
@@ -159,6 +159,16 @@ header.hero-img {
 	}
 }
 
+.portfolio {
+	.carousel-item {
+		height: 600px;
+	}
+	.carousel-caption {
+		left: 0;right: 0;
+		background-color: rgba(0, 0, 0, 0.8);
+	}
+}
+
 @media (min-width: 768px) {
 	.hero-text {
 		h1 {
