added cards for mobile

--- a/css/main.css
+++ b/css/main.css
@@ -146,7 +146,11 @@ header.hero-img .fa-chevron-down {
 .portfolio .carousel-caption {
   left: 0;
   right: 0;
+  padding: 40px 0;
   background-color: rgba(0, 0, 0, 0.8);
+}
+.portfolio .carousel-indicators {
+  padding-bottom: 20px;
 }
 
 @media (min-width: 768px) {
