--- a/css/main.css
+++ b/css/main.css
@@ -10,7 +10,7 @@ html {
 
 body {
   font-family: "Montserrat", sans-serif;
-  background-color: #333;
+  background-color: #ebecf2;
 }
 
 .blue-text {
@@ -31,6 +31,13 @@ body {
   width: 60px;
   height: 4px;
   background-color: #039dff;
+}
+
+.underline-small {
+  margin: 20px auto 20px;
+  width: 300px;
+  height: 1px;
+  background-color: #ebecf2;
 }
 
 nav {
