--- a/sass/main.scss
+++ b/sass/main.scss
@@ -12,7 +12,7 @@ html {
 
 body {
 	font-family: 'Montserrat', sans-serif;
-	background-color: #333;
+	background-color: $bg-color;
 }
 
 .blue-text {
@@ -33,6 +33,13 @@ body {
 	width: 60px;
 	height: 4px;
 	background-color: $main-color;
+}
+
+.underline-small {
+	margin: 20px auto 20px;
+	width: 300px;
+	height: 1px;
+	background-color: $bg-color;
 }
 
 nav {
